@@ -14,8 +14,8 @@ use SimpleComplex\Utils\Utils;
 use SimpleComplex\Utils\Dependency;
 use SimpleComplex\Utils\PathFileList;
 use SimpleComplex\Cache\CacheBroker;
-use SimpleComplex\Cache\ManageableCacheInterface;
-use SimpleComplex\Cache\BackupCacheInterface;
+use SimpleComplex\Cache\Interfaces\ManageableCacheInterface;
+use SimpleComplex\Cache\Interfaces\BackupCacheInterface;
 use SimpleComplex\Config\Exception\LogicException;
 use SimpleComplex\Config\Exception\InvalidArgumentException;
 use SimpleComplex\Config\Exception\OutOfBoundsException;
